# actix-sqlx-boilerplate

./: .env.dist  .gitignore  Cargo.toml  README.md  ROUTES.md  askama.toml  drill.yml
migrations/: 20210304173344_create_users_table.down.sql  20210304173344_create_users_table.up.sql  20210615190938_create_task_table.down.sql  20210615190938_create_task_table.up.sql
src/: config.rs  errors.rs  lib.rs  logger.rs  main.rs  routes.rs
src/actors/: cache.rs  list.rs
src/handlers/: errors.rs  mod.rs  task.rs  users.rs  web.rs  ws.rs
src/logger/: formatter_layer.rs  mod.rs  storage_layer.rs
src/middlewares/: auth.rs  mod.rs  request_id.rs  timer.rs
src/models/: auth.rs  mod.rs  task.rs  user.rs
src/repositories/: mod.rs  task.rs  user.rs
src/ws/: mod.rs
src/ws/chat/: client.rs  server.rs
static/css/: chat.css
static/js/: chat.js
templates/: ws.html
templates/ws/: chat.html  ws.html
