[package]
authors = ["Fabien Bellanger <valentil@gmail.com>"]
description = "Actix-web - SQLx boilerplate"
edition = "2018"
name = "actix_sqlx_boilerplate"
readme = "README.md"
repository = "https://github.com/fabienbellanger/actix-sqlx-boilerplate"
version = "0.1.0"
# default-bin = "api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
actix = "0.10.0"
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-http = "2"
actix-service = "1.0.6"
actix-web = "3"
actix-web-actors = "3"
actix-web-prom = "0.5"
actix-web-validator = "2.1.1"
askama_actix = "0.11.1"
async-stream = "0.3.2"
bytes = "1.0.1"
chrono = {version = "0.4.19", features = ["serde"]}
color-eyre = "0.5.10"
config = "0.11.0"
derive_more = "0.99.11"
dotenv = "0.15"
env_logger = "0.9.0"
eyre = "0.6.3"
futures = "0.3"
jsonwebtoken = "7.2.0"
log = "0.4.11"
rand = "0.8"
reqwest = "0.11.3"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9"
sqlx = {version = "0.4.2", default-features = false, features = ["runtime-actix-rustls", "macros", "mysql", "uuid", "chrono", "migrate"]}
tokio = {version = "0.2", features = ["time"]}
tracing = "0.1"
tracing-appender = "0.1.2"
tracing-core = "0.1.18"
tracing-futures = "0.2"
tracing-log = {version = "0.1", features = ["env_logger"]}
tracing-subscriber = {version = "0.2", features = ["registry", "env-filter", "fmt"]}
uuid = {version = "0.8", features = ["serde", "v4"]}
validator = {version = "0.12.0", features = ["derive"]}

[dependencies.askama]
features = ["with-actix-web", "serde-json"]
version = "0.10"
